# background-auto-updater

./: .gitignore  README.md  check_images_contsant.py  forever.py  main.py  pyproject.toml  requirements.txt  snowbasin_archive.py  snowbasin_image.py
src/: edit_image.py  main.py  snowbasin_image.py
src/core/: background.py  logger.py
src/nasa/: main.py  nasa_image_of_the_day.py
src/snowbasin/: README.md  main.py  snowbasin_image.py
