[project]
name = "background-image-updater"
description = "Update your background to the most recent image of your favorite site"
version = "1.5.0"

[project.scripts]
snowbasin="snowbasin.main:main"
nasa="nasa.nasa_image_of_the_day:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"